--- a/src/Components/Jobs/Jobs.scss
+++ b/src/Components/Jobs/Jobs.scss
@@ -4,6 +4,7 @@
     width: 50%;
     margin: 15px auto;
     padding: 15px;
+    background-image: linear-gradient(0deg, #2f232a, #f8f8f8);
 }
 
 /* On mouse-over, add a deeper shadow */
