--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -7,7 +7,6 @@
     margin:auto;
     background-color: #d6d5d6;
     margin-bottom:10px;
-    padding:10px;
     color:white;
     box-shadow: 10px 0 20px 0 rgba(0, 0, 0, 0.1), 5px 0 5px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
@@ -19,5 +18,11 @@
 
 .weather-box h5 {
     font-size: 18px;
+    
+}
+@media only screen and (max-width: 768px) {
+    #weather-cont {
+        width:100%;
+    }
     
 }
