--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -46,3 +46,25 @@
     position: relative;
     top: 45px;
 }
+#mobile-nav {
+    width:100%;
+    display:none;
+    background-color: beige;
+    justify-content: space-around;
+}
+#mobile-nav > a {
+    list-style: none;
+}
+#mobile-nav > a:hover {
+    color:grey;
+}
+@media only screen and (max-width: 768px) {
+    #nav {
+        display:none;
+    }
+    #mobile-nav {
+        display:flex;
+        padding: 10px;
+    }
+    
+}
