--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -6,10 +6,23 @@ footer {
     margin-top:20px;
     border-radius: 10px;
 }
+
+#footer-cont {
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    width:70%;
+    margin:auto;
+    left:14vw;
+}
 @media only screen and (max-width: 768px) {
-    footer{
+    #footer{
         width:100%;
         margin-left:0;
     }
+    #footer-cont {
+        left: 8vw;
+    }
+    
     
 }
