--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -9,7 +9,6 @@
     margin-bottom:10px;
     color:white;
     box-shadow: 10px 0 20px 0 rgba(0, 0, 0, 0.1), 5px 0 5px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
 }
 
 .weather-box {
@@ -23,6 +22,9 @@
 @media only screen and (max-width: 768px) {
     #weather-cont {
         width:100%;
+    }
+    .padding-top {
+        padding-top:20px;
     }
     
 }
