--- a/src/Components/Register/Register.scss
+++ b/src/Components/Register/Register.scss
@@ -15,3 +15,9 @@
     border-radius: 7px;
     margin:5px;
 }
+
+@media only screen and (max-width: 768px) {
+    .card3 {
+        width:90%;
+    }
+}
