--- a/src/Components/AddJob/AddJob.scss
+++ b/src/Components/AddJob/AddJob.scss
@@ -17,9 +17,9 @@ textarea {
     border-radius:15px;
     border:0;
     box-shadow:4px 4px 10px rgba(0,0,0,0.06);
-    height:150px;
+    height:100px;
     text-align: center;
-    font-family: fantasy;
+    margin-top:25px;
   }
   input:hover, textarea:hover {
     background-color: lightgrey;
