--- a/src/Components/Profile/Profile.scss
+++ b/src/Components/Profile/Profile.scss
@@ -25,13 +25,13 @@ a:visited {
 .skills-box > h5 {
     margin: 0;
     font-size: 25px;
-    color: darkgrey;
+    color: snow;
     text-decoration: underline;
 }
 .contact-box  span {
     margin: 0;
     font-size: 25px;
-    color: darkgrey;
+    color: snow;
     text-decoration: underline;
 }
 @media only screen and (max-width: 768px) {
