--- a/src/Components/Loading/Loading.scss
+++ b/src/Components/Loading/Loading.scss
@@ -1,5 +1,9 @@
-#loading-screen {
+.loading-screen {
     width: 80%;
     min-height: 70vh;
     width: 80%;
+}
+
+@media only screen and (max-width: 768px) {
+    .loading-screen {width: 80%;}
 }
