--- a/src/Components/Profile/Profile.scss
+++ b/src/Components/Profile/Profile.scss
@@ -13,26 +13,41 @@
 }
 .contact-box {
     width:30%;
+    padding:20px;
 
 }
 .skills-box {
     width: 30%;
+    padding-top: 50px;
+    padding-left: 30px;
 }
 
 a:visited {
     color:black;
 }
-.skills-box > h5 {
-    margin: 0;
-    font-size: 25px;
-    color: snow;
-    text-decoration: underline;
+.skills-box {
+    h5 {
+        margin: 0;
+        font-size: 25px;
+        color: snow;
+        text-decoration: underline;
+    }
 }
-.contact-box  span {
+.skills-box2 {
     margin: 0;
     font-size: 25px;
     color: snow;
     text-decoration: underline;
+    padding-top: 15px;
+    padding-left:100px;
+}
+.contact-box {
+    span {
+        margin: 0;
+        font-size: 25px;
+        color: snow;
+        text-decoration: underline;
+    }
 }
 @media only screen and (max-width: 768px) {
     .card2 {
@@ -45,12 +60,25 @@ a:visited {
     .skills-box {
         width:100%;
     }
-    .skills-box > ul {
-        list-style: none;
-        padding:0;
+    .skills-box2 {
+        padding-left:0px;
+    }
+    .skills-box {
+        ul {
+            list-style: none;
+            padding:0;
+        }
     }
     #card2-img {
         width:100%;
         margin-bottom:10px;
+    }
+    .skills-box {
+        width: 30%;
+        padding-top: 10px;
+        padding-left: 130px;
+    }
+    .contact-box {
+        padding:0;
     }
 }
